# rc-self-directives

./: LICENSE.txt  README.md  setup.cfg
src/: self-directives.py
