[metadata]
name = rc-self-directives
version = 1.0.0
author = Grace and Johann
author_email = info@recurse.com
description = A simple Python package that returns the 3 self-directives
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/johanndiedrick/rc-self-directives
project_urls =
    Bug Tracker = https://github.com/johanndiedrick/rc-self-directives/issues
    repository = https://github.com/johanndiedrick/rc-self-directives
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src